Исправить половину багов